--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,7 @@ main{
 }
 .meme--image{
   max-width: 100% ;
+   margin-left: 50%;
 }
 .box{
   height: 100px;
@@ -115,14 +116,14 @@ position: relative;
 font-weight: 1000;
  font-size: larger;
 text-transform:uppercase;
-
+margin-left: 45%;
 
  }
  .top{
- top:-5%;
+ top:-2%;
   left: 50%;
  }
  .bottom{
- top: 100%;
+ top: 80%;
  left: 50%;
  }
